--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 *, *::before, *::after {
@@ -7,7 +8,8 @@ html {
 }
 
 .both-content {
-  position: a
+  position: absolute;
+  bottom: 0;
   display: flex;
 }
 
@@ -15,16 +17,37 @@ html {
   position: relative;
 }
 
-.banner-content {
-  display: inline-block;
+.img-flex {
+  max-height: 500px;
+  width: 100%;
 }
 
-.btn .btn-big {
+.banner-content {
+  width: 100%;
+  display: inline-block;
+  max-width: 45em;
+}
+
+p
+a {
+  font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
   display: inline-block;
   background-color: #333;
   border-radius: 8px;
   text-decoration: none;
-  font-size: 1.5rem;
   color: #fff;
   padding: .5em .75em;
+}
+
+.btn .btn-big {
+  display: inline-block;
+}
+
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
 }
