--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ body {
   top: 50%;
   display: flex;
   justify-content: center;
-  align-items: top;
-  transform: translate(-50%,-50%);
+  align-items: flex-start;
+  transform: translate(-50%, -50%);
   width: 100%;
   max-width: 45em;
 }
@@ -30,7 +30,7 @@ body {
 }
 
 .img-flex {
-  display: flex;
+  display: block;
   width: 100%;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 .logo {
-  width: 40%;
+  width: 70%;
   display: inline-block;
   max-width: 45em;
 }
