--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  transform: translate(-50%, -50%);
+  transform: translate(-60%, -50%);
   width: 100%;
+  margin-top: 1.6em;
   max-width: 45em;
-  margin-top: 1.5em;
 }
 
 .banner {
@@ -38,18 +38,19 @@ body {
 .banner-content {
   width: 100%;
   display: inline-block;
-  max-width: 45em;
 }
 
 .logo {
   width: 63%;
   display: inline-block;
   max-width: 45em;
+  margin-left: 5em;
 }
 
 p {
   font-size: 1.5rem;
   line-height: 1.5;
+  margin-top: .4em;
 }
 
 .btn {
@@ -59,7 +60,7 @@ p {
   text-decoration: none;
   font-size: 1.125rem;
   color: #fff;
-  padding: .5em .75em;
+  padding: .75em;
 }
 
 .btn:hover {
